# charlotte

./: README.md  main.py  pyproject.toml
charlotte/: __init__.py  pyproject.toml
experiments/: check_vertical_lines.py
experiments/check_diagonal_lines/: ___valid_diagonals.py  main.py  tests.py  valid_diagonals.py
experiments/check_horizontal_vertical_lines_v2/: main.py  tests.py  tests_horizontal.py  tests_vertical.py
frontends/console/: main.py  pyproject.toml
frontends/web/: app.py  pyproject.toml
frontends/web/static/stylesheets/: global.css  welcome.css
frontends/web/templates/: welcome.html
tests/: check_horizontal_lines.py  check_horizontal_vertical_lines.py  forms_lines.py
