
[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "charlotte-web"
version = "0.0.1"
authors = [{ name="Aarav Shah" , email="<aaravaditya51@gmail.com>"}]
dependencies = ["Flask==3.0.0"]

[project.urls]
Homepage = "https://github.com/Deaths-Door/charlotte"
Issues = "https://github.com/Deaths-Door/charlotte/issues"